--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ li {
 .menu {
  position: fixed;
  height: 100%;
- width: 20vw;
- background: #00000080;
+ width: 40vw;
+ background: #000000d6;
  z-index: 10;
  right: -100%;
  top: 0;
@@ -78,13 +78,21 @@ li {
 #menu__list {
  display: flex;
  flex-direction: column;
- align-items: center;
+ align-items: flex-start;
  gap: 2vh;
  padding: 10px;
  height: 100%;
  z-index: 10;
+ overflow-x: overlay;
 }
-
+.menu__list-link{
+ color: var(--white);
+}
+.wrap>iframe {
+ width: 100vw;
+ height: 90vh;
+ border: none;
+}
 .menu>ul>li>a {
  color: var(--white);
 }
