--- a/style.css
+++ b/style.css
@@ -96,3 +96,56 @@ li {
 .menu>ul>li>a {
  color: var(--white);
 }
+
+/* loading */
+.loader {
+ position: absolute;
+ margin: -75px 0 0 -75px;
+ width: 150px;
+ height: 150px;
+ left: 50%;
+ top: 50%;
+ overflow: hidden;
+ font-family: verdana;
+ letter-spacing:-21px;
+ /* border: 1px solid #ececec; */
+ border-bottom-right-radius: 40px;
+ z-index: 1;
+}
+.loader:after {
+ position: absolute;
+ content: '';
+ width: 150px;
+ height: 0px;
+ bottom: 0;
+ left: 0;
+ opacity: 1;
+ background: #e54e02;
+ animation: loader 3s infinite;
+ z-index: 0;
+}
+.loader:before {
+ content: 'V';
+ position: absolute;
+ z-index: 1;
+ font-size: 110px;
+ top: 40%;
+ left: 70%;
+ margin: -55px 0 0 -65px;
+ color: #fff;
+}
+@keyframes loader {
+ 0% {
+   height: 0;
+   opacity: 1;
+ }
+ 80% {
+   height: 150px;
+   opacity: 1;
+ }
+ 100% {
+   height: 150px;
+   opacity: 0;
+ }
+}
+/* loading */
