--- a/style.css
+++ b/style.css
@@ -85,16 +85,57 @@ li {
  z-index: 10;
  overflow-x: overlay;
 }
-.menu__list-link{
+
+.menu__list-link {
  color: var(--white);
 }
+
 .wrap>iframe {
  width: 100%;
  height: 90vh;
  border: none;
 }
+
 .menu>ul>li>a {
  color: var(--white);
+}
+
+.content {
+ opacity: 1;
+ width: 70%;
+ height: 90vh;
+ margin: 0 auto;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+}
+.content__text{
+ flex: 2;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ text-align: center;
+ gap: 3vh;
+}
+.content__title>span{
+ color: #15feff;
+}
+.content__description{
+ letter-spacing: 0.05em;
+ line-height: 3vh;
+}
+.content__description>span{
+ text-transform: uppercase;
+ color: #15feff;
+ letter-spacing: 0.2em;
+}
+.content__footer{
+ letter-spacing: 0.2em;
+text-align: center;
+}
+.content__footer>span{
+ color: #15feff;
 }
 
 /* loading */
@@ -107,11 +148,12 @@ li {
  top: 50%;
  overflow: hidden;
  font-family: verdana;
- letter-spacing:-21px;
+ letter-spacing: -21px;
  /* border: 1px solid #ececec; */
  border-bottom-right-radius: 40px;
  z-index: 1;
 }
+
 .loader:after {
  position: absolute;
  content: '';
@@ -120,10 +162,11 @@ li {
  bottom: 0;
  left: 0;
  opacity: 1;
- background: #e54e02;
+ background: #15feff;
  animation: loader 3s infinite;
  z-index: 0;
 }
+
 .loader:before {
  content: 'V';
  position: absolute;
@@ -134,18 +177,22 @@ li {
  margin: -55px 0 0 -65px;
  color: #fff;
 }
+
 @keyframes loader {
  0% {
-   height: 0;
-   opacity: 1;
+  height: 0;
+  opacity: 1;
  }
+
  80% {
-   height: 150px;
-   opacity: 1;
+  height: 150px;
+  opacity: 1;
  }
+
  100% {
-   height: 150px;
-   opacity: 0;
+  height: 150px;
+  opacity: 0;
  }
 }
+
 /* loading */
