--- a/style.css
+++ b/style.css
@@ -100,7 +100,18 @@ li {
  font-size: 18px;
  text-transform: uppercase;
 }
-
+.content__donat{
+ color: #15feff;
+ font-size: 15px;
+ text-transform: uppercase;
+ letter-spacing: 0.2em;
+ text-align: center;
+ padding: 10px 15px;
+ border: 1px solid;
+ width: fit-content;
+ margin: 0 auto 20px;
+ border-radius: 10px;
+}
 .wrap>iframe {
  width: 100%;
  height: 90vh;
