add btn random films

--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ li {
  align-items: flex-start;
  gap: 2vh;
  padding: 10px;
- height: 100%;
  z-index: 10;
  overflow-x: overlay;
 }
@@ -121,7 +120,18 @@ li {
 .menu>ul>li>a {
  color: var(--white);
 }
-
+.menu>button {
+ color: #15feff;
+ font-size: 15px;
+ text-transform: uppercase;
+ letter-spacing: 0.2em;
+ text-align: center;
+ padding: 10px 15px;
+ border: 1px solid;
+ width: fit-content;
+ margin: 10px;
+ border-radius: 10px;
+}
 .content {
  opacity: 1;
  width: 100%;
