--- a/style.css
+++ b/style.css
@@ -111,11 +111,22 @@ li {
  margin: 0 auto 20px;
  border-radius: 10px;
 }
+
+
+
+
 .wrap>iframe {
  width: 100%;
  height: 90vh;
  border: none;
 }
+
+.wrap__pages{
+    height: 90vh;
+    display: flex;
+    width: 200%;
+}
+
 
 .menu>ul>li>a {
  color: var(--white);
