--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@ li {
     -moz-transition: right .7s;
     -ms-transition: right .7s;
     -o-transition: right .7s;
-    z-index: 10;
 }
 
 #menu-btn>svg {
@@ -163,7 +162,7 @@ li {
 .menu>ul>li>a {
     color: var(--white);
 }
-/* 
+/*
 .menu__btn {
 } */
 
@@ -324,9 +323,6 @@ li {
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
-}
-
-.slide {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -337,15 +333,17 @@ li {
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    color: var(--white);
 }
 
-.slide>h3 {
+
+.slide>button>h3 {
     font-size: 36px;
     margin: 0 0 10px;
     text-shadow: 2px 2px 4px var(--shadow-color);
 }
 
-.slide>span {
+.slide>button>span {
     font-size: 24px;
     margin: 0;
     text-shadow: 1px 1px 2px var(--shadow-color);
