setting list strime

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ li {
     flex: 0 0 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
     padding: 20px;
@@ -337,18 +337,15 @@ li {
 }
 
 
-.slide>button>h3 {
+.slides>button>h3 {
     font-size: 36px;
-    margin: 0 0 10px;
     text-shadow: 2px 2px 4px var(--shadow-color);
 }
 
-.slide>button>span {
+.slides>button>span {
     font-size: 24px;
-    margin: 0;
     text-shadow: 1px 1px 2px var(--shadow-color);
     padding: 5px 10px;
-    background: black;
     border-radius: 10px;
 }
 
@@ -404,4 +401,36 @@ li {
 }
 .slider-arrow.right {
     right: 10px;
+}
+
+.activeVideo {
+    background: #15feff;
+    font-weight: bold;
+    color: #3c3c3c;
+}
+
+#listStrimes{
+    margin: 2vh 0;
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+    max-height: 55vh;
+    height: 55vh;
+    overflow-x: scroll;
+    background: #333;
+    padding: 0.5em;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+#listStrimes>li{
+    border-bottom: 1px solid #15feff;
+    line-height: 4vh;
+}
+#listStrimes > li > a > p {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
