--- a/style.css
+++ b/style.css
@@ -301,6 +301,18 @@ li {
 }
 
 /* slider home */
+.slide:before {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color:rgba(0, 0, 0, .4);
+}
 
 .top-slider {
     position: relative;
@@ -340,8 +352,9 @@ li {
 
 
 .slides>button>h3 {
-    font-size: 36px;
+    font-size: 6vw;
     text-shadow: 2px 2px 4px var(--shadow-color);
+    z-index: 10;
 }
 
 .slides>button>span {
@@ -349,6 +362,7 @@ li {
     text-shadow: 1px 1px 2px var(--shadow-color);
     padding: 5px 10px;
     border-radius: 10px;
+    z-index: 10;
 }
 
 .rewards-slide span {
@@ -392,6 +406,7 @@ li {
     cursor: pointer;
     z-index: 10;
     transition: background-color 0.3s ease;
+    z-index: 10;
 }
 
 .slider-arrow:hover {
