--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ li {
     width: 200vw;
     justify-content: space-between;
     position: absolute;
-    bottom: 0;
+    bottom: 4vh;
     left: 0;
     transition: left .4s linear;
     -webkit-transition: left .4s linear;
@@ -455,15 +455,14 @@ li {
     border-bottom: 1px solid #15feff;
     line-height: 4vh;
 }
-#listStrimes>li>button>p {
-    width: 100%;
-    display: contents;
-    line-height: 4vh;
+#listStrimes>li>button>h4 {
+    width: 60%;
+    text-align: start;
+    line-height: 3vh;
 }
 #listStrimes>li>button{
     display: flex;
     justify-content: space-between;
     width: 100%;
-    font-size: 16px;
     align-items: center
 }
