--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ button {
 }
 
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: var(--bg-pages);
-    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: var(--white);
 }
@@ -423,7 +423,7 @@ li {
 .activeVideo {
     background: #15feff;
     font-weight: bold;
-    color: #3c3c3c;
+    color: #1d1d1d;
 }
 .newListItem{
     color: var(--white);
