--- a/style.css
+++ b/style.css
@@ -314,143 +314,15 @@ bottom: 2vh;
     z-index: -1;
 }
 
-/* slider home */
-.slide:before {
-	content: '';
-	display: block;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: var(--opasBg);
-    z-index: -99;
-}
 
-.top-slider {
-    position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-    height: 200px;
-    box-shadow: 0px 6px 10px var(--dartGraay);
-}
-
-.slides {
-    display: flex;
-    transition: transform 0.5s ease;
-    height: 100%;
-}
-
-.slide {
-    flex: 0 0 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    box-shadow: 0 4px 6px var(--dartGraay);
-    background-repeat: round;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    color: var(--white);
-}
-
-
-.slides>button>h3 {
-    width: 80%;
-    font-size: 4vw;
-    text-shadow: 2px 2px 4px var(--dartGraay);
-    z-index: 10;
-}
-
-.slides>button>span {
-    font-size: 24px;
-    text-shadow: 1px 1px 2px var(--dartGraay);
-    padding: 5px 10px;
-    border-radius: 10px;
-    z-index: 10;
-}
-
-.slider-nav {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 10px;
-}
-
-.slider-dot {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: var(--disableGraay);
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.slider-dot.active {
-    background-color: var(--white);
-}
-
-.slider-arrow {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    background-color: var(--opasBg);
-    color: var(--white);
-    border: none;
-    width: 10vw;
-    font-size: 20px;
-    cursor: pointer;
-    z-index: 10;
-    transition: background-color 0.3s ease;
-    z-index: 20;
-}
-
-.slider-arrow:hover {
-    background-color: var(--opasBg);
-}
-
-.slider-arrow.left {
-    left: 0px;
-}
-.slider-arrow.right {
-    right: 0px;
-}
-
-.activeVideo {
-    background: var(--akcent);
-    color: var(--bg-pages);
-}
-.newListItem{
-    color: var(--white);
-}
-.activeListItem{
-    color: var(--akcent);
-}
-.disabledListItem{
-    color: var(--disableGraay);
-}
 
 #listStrimes{
     margin: 2vh 0;
     display: flex;
     flex-direction: column;
     gap: 2vh;
-    max-height: 55vh;
-    height: 55vh;
+    max-height: 80vh;
+    height: 80vh;
     overflow-y: scroll;
     background: #393939;
     padding: 0.5em;
@@ -460,22 +332,23 @@ bottom: 2vh;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
 }
-#listStrimes>li{
+.list__strim-item{
     border-bottom: 1px solid var(--akcent);
-    line-height: 4vh;
-}
-#listStrimes>li>button>h4 {
-    width: 60%;
-    text-align: start;
     line-height: 3vh;
-}
-#listStrimes>li>button{
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center
 }
-.slider__item-h4{
-    text-align: center;
-    padding: 2vh 0;
+
+.list__strim-link{
+    display: flex;
+    align-items: center;
+    color: var(--white);
+    gap: 5vw;
+    padding-bottom: 1vh;
+}
+.list__strim-link>h3{
+    text-align: start;
+    flex: 1;
+}
+.list__strim-item .active{
+    color: var(--akcent);
 }
