--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ bottom: 2vh;
     bottom: 0;
 }
 
-.wrap>.wrap__pages>iframe {
+.wrap>iframe {
     width: 100%;
     height: 90vh;
     border: none;
