--- a/style.css
+++ b/style.css
@@ -168,8 +168,8 @@ bottom: 2vh;
 }
 
 .wrap>iframe {
-    width: 100%;
-    height: 90vh;
+    width: 100%!important;
+    height: 90vh!important;
     border: none;
 }
 
