--- a/style.css
+++ b/style.css
@@ -363,3 +363,12 @@ li {
     width: 100%;
     justify-items: center;
 }
+/* .wrap>a{
+    display: flex;
+        margin: 50vh auto;
+        padding: 2vh;
+        border: 1px solid;
+        align-items: center;
+        justify-content: center;
+        width: 70vw;
+} */
