--- a/style.css
+++ b/style.css
@@ -400,6 +400,22 @@ li {
     width: 70vw;
 }
 
+.list__strim-item.past {
+  opacity: 0.7;
+}
+
+.list__strim-link.past {
+  cursor: default;
+}
+
+.list__strim-link.past h3 {
+  color: #999;
+}
+
+.list__strim-link[disabled] {
+  pointer-events: none;
+}
+
 @media (min-width: 320px) {
     #listStrimes {
         display: grid;
