--- a/style.css
+++ b/style.css
@@ -432,6 +432,7 @@ li {
     #listStrimes {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
         gap: 3vw;
     }
 }
